minor modif in DOC

--- a/DOC/nautilus_documentation.tex
+++ b/DOC/nautilus_documentation.tex
@@ -180,6 +180,8 @@ This option \textbf{test} use compilation options that allow comparison of the c
 
 \begin{remarque}
 Mainly, these option avoid too hard optimization that can result in slightly different results when the code evolve (not because the maths changes but because of optimization only).
+
+If you change compilation options, pay attention to use the option \textbf{force} to ensure all the modules we be compiled using these options.
 \end{remarque}
 
 \subsection{Input files}\label{sec:input-files}
